initial For 200 Bay的修改

--- a/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
@@ -44,7 +44,7 @@
   <add key="LicenseKeyVandor" value="2" />
 
   <!--DIJKSTRA,FLOYD-->
-  <add key="ShortestPathAlgorithm" value="FLOYD" />
+  <add key="ShortestPathAlgorithm" value="DIJKSTRA" />
   <add key="MoveCostForward" value="1" />
   <add key="MoveCostReverse" value="1" />
   <!--當CST的等待時間大於N分鐘後，該CST將會被優先搬走-->
@@ -54,6 +54,6 @@
   <!--實際車子的高、寬以及Secsor的寬度-->
   <add key="VehicleHeight" value="1880" />
   <!--<add key="VehicleWidth" value="3290" />-->
-  <add key="VehicleWidth" value="4990" />
-  <add key="SensorWLength" value="300" />
+  <add key="VehicleWidth" value="3290" />
+  <add key="SensorWLength" value="1200" />
 </appSettings>
