--- a/BCWinForm/Config/AUO_CAAGV200/App.config
+++ b/BCWinForm/Config/AUO_CAAGV200/App.config
@@ -39,6 +39,8 @@
     <TimerAction name="LinkStatusCheck" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.LinkStatusCheck, ScriptControl" systemAction="false" />
     <!--<TimerAction name="AGVCAliveTimer" intervalMilliSec="4000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.AGVCAliveTimer, ScriptControl" systemAction="false" />-->
     <TimerAction name="CouplerCheckTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.CouplerCheckTimerAction, ScriptControl" systemAction="false" />
+    <TimerAction name="DeadlockCheck" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.DeadlockCheck, ScriptControl" systemAction="false" />
+
   </TimerActionDefs>
 
   <nlog configSource="Config\NLog_simple.config" />
@@ -63,7 +65,7 @@
   </startup>
   <connectionStrings>
     <!--name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=OHSC_6F_100_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_CAAGV200_v4;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_CAAGV200_v5;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
