--- a/ScriptControl/App.config
+++ b/ScriptControl/App.config
@@ -7,7 +7,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <connectionStrings><add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-URTLJN10\SQLEXPRESS;initial catalog=AGVC_North_Innolux_Test_Site;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-M9I703GC;initial catalog=AGVC_CAAGV100_v4;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
