--- a/BCWinForm/Config/AUO_CAAGV200/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV200/EquipmentDefs_simple.config
@@ -14,25 +14,26 @@
       <Node id="AGV_NODE" node_num="1" >
         <Vehicle id="AGV01" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction, ScriptControl" tcpipAgentName="OHxC_TO_OHx01"/>
         <Vehicle id="AGV02" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction, ScriptControl" tcpipAgentName="OHxC_TO_OHx02"/>
+        <Vehicle id="AGV03" communicationType="3" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EQTcpIpMapAction, ScriptControl" tcpipAgentName="OHxC_TO_OHx03"/>
       </Node>
       <Node id="EQ_NODE" node_num="2" >
-        <EQPT id="EQ1" eqptType="3" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EquipmentValueDefMapAction, ScriptControl">
-
+       <EQPT id="EQ1" eqptType="3" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EquipmentValueDefMapAction, ScriptControl">
+          
         </EQPT>
         <EQPT id="EQ4" eqptType="3" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EquipmentValueDefMapAction, ScriptControl">
           <PortStation id="CARGV010:AIN1" unit_num="1" adr_id ="52024"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-          <PortStation id="CARGV010:AOUT1" unit_num="2" adr_id ="76023"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
+          <PortStation id="CARGV010:AOUT1" unit_num="2" adr_id ="68023"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
           <PortStation id="CALFT030:AIN1" unit_num="3" adr_id ="52025"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-          <PortStation id="CALFT030:AOUT1" unit_num="4" adr_id ="68026"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
+		  <PortStation id="CALFT030:AOUT1" unit_num="4" adr_id ="76026"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
 
         </EQPT>
-
+       
         <EQPT id="EQ3" eqptType="1" communicationType="1" >
           <PortStation id="CASTK020:AOUT1" unit_num="1" adr_id ="76001" load_vh_type ="0" unload_vh_type ="0" />
-          <PortStation id="CASTK020:AIN1" unit_num="2" adr_id ="68003" load_vh_type ="0" unload_vh_type ="0" />
-          <PortStation id="AARGV050:AOUT2" unit_num="3" adr_id ="76004" load_vh_type ="0" unload_vh_type ="0" />
-          <PortStation id="AARGV050:AIN2" unit_num="4" adr_id ="68007" load_vh_type ="0" unload_vh_type ="0" />
-          <PortStation id="AASTK230:AIO1" unit_num="5" adr_id ="68010" load_vh_type ="0" unload_vh_type ="0" />
+		  <PortStation id="CASTK020:AIN1" unit_num="2" adr_id ="68003" load_vh_type ="0" unload_vh_type ="0" />
+		  <PortStation id="AARGV050:AOUT2" unit_num="3" adr_id ="76004" load_vh_type ="0" unload_vh_type ="0" />
+		  <PortStation id="AARGV050:AIN2" unit_num="4" adr_id ="76007" load_vh_type ="0" unload_vh_type ="0" />
+		  <PortStation id="AASTK230:AIO1" unit_num="5" adr_id ="68010" load_vh_type ="0" unload_vh_type ="0" />
         </EQPT>
 
 
@@ -57,7 +58,7 @@
         </EQPT>
         <EQPT id="FireDoor1" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl">
         </EQPT>
-        <EQPT id="FireDoor2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl">
+         <EQPT id="FireDoor2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl">
         </EQPT>
       </Node>
     </Zone>
