--- a/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
+++ b/BCWinForm/Config/AUO_CAAGV200/AppSettings_simple.config
@@ -55,5 +55,6 @@
   <add key="VehicleHeight" value="1880" />
   <!--<add key="VehicleWidth" value="3290" />-->
   <add key="VehicleWidth" value="3290" />
-  <add key="SensorWLength" value="1200" />
+  <add key="SensorWLength" value="1300" />
+  <!--<add key="SensorWLength" value="1300" />-->
 </appSettings>
