--- a/BCWinForm/Config/NORTH_INNOLUX/EQMapToValueEvent.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/EQMapToValueEvent.config
@@ -1,5 +1,5 @@
 ﻿<EQMapToValueEvent>
-  <!--<EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
+  <EQObject id="MCharger" cate="Equipment" MPLCName="Charger">
     <ValueEvent baseName="AGVC_TO_CHARGER_INDEX_AREA" relativeName="AGVC_TO_CHARGER_INDEX_AREA"></ValueEvent>
     <ValueEvent baseName="AGVC_TIME_SYNC_COMMAND" relativeName="AGVC_TIME_SYNC_COMMAND"></ValueEvent>
     <ValueEvent baseName="AGVC_TO_MCHARGER_INDEX_AREA" relativeName="AGVC_TO_MCHARGER_INDEX_AREA"></ValueEvent>
@@ -30,7 +30,7 @@
     <ValueEvent baseName="CHARGER2_TO_AGVC_PIO_HANDSHAKE_REPORT" relativeName="CHARGERX_TO_AGVC_PIO_HANDSHAKE_REPORT"></ValueEvent>
   </EQObject>
 
-  <EQObject id="Charger3" cate="Unit" MPLCName="Charger" isValueEventTrigger="Y">
+  <!--<EQObject id="Charger3" cate="Unit" MPLCName="Charger" isValueEventTrigger="Y">
     <ValueEvent baseName="AGVC_TO_CHARGER3_INDEX_AREA" relativeName="AGVC_TO_CHARGERX_INDEX_AREA"></ValueEvent>
     <ValueEvent baseName="AGVC_TO_CHARGER3_COUPLER_ENABLE_DISABLE" relativeName="AGVC_TO_CHARGERX_COUPLER_ENABLE_DISABLE"></ValueEvent>
     <ValueEvent baseName="CHARGER3_TO_AGVC_INDEX_AREA" relativeName="CHARGERX_TO_AGVC_INDEX_AREA"></ValueEvent>
