***v1.2.0.41    2020/11/02  (Mark Chou)       Bugfix    --修正Cycle Run Move類型命令沒有效用的問題。
***v1.2.0.40
   2020/10/21  (Mark Chou)
      Bugfix
   --修正除北群創專案外收到AGV Event36會無法正常回覆問題。

***v1.2.0.38
   2020/10/12  (Mark Chou)
      Bugfix
   --修正北群創Rename CST舊ID會給空白的問題。
   功能修正
   --北群創MCS命令不正常結束，Result Code都填1(Error)。

***v1.2.0.37
   2020/10/06  (Mark Chou)
   功能修正
   --北群創下達命令取消(Event 37)前改為不下達車輛暫停(Event 39)。

***v1.2.0.36
   2020/10/05  (Mark Chou)
   功能修正
   --北群創收到S2F49不檢查Load Port有沒有其他命令。
   --修改Event 36格式，加入RePosition功能
   --修正北群創沒有在命令結束後立刻刪除MCS Command的問題。

--- a/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
@@ -57,5 +57,6 @@
   <add key="VehicleHeight" value="1880" />
   <add key="VehicleWidth" value="3290" />
   <add key="SensorWLength" value="300" />
-
+  <!--RePosition至少要退避的距離-->
+  <add key="RePositionDistance" value="6000" />
 </appSettings>
