--- a/BCWinForm/Config/NORTH_INNOLUX_Test_Site/AppSettings_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX_Test_Site/AppSettings_simple.config
@@ -57,5 +57,7 @@
   <add key="VehicleHeight" value="1400" />
   <add key="VehicleWidth" value="2700" />
   <add key="SensorWLength" value="0" />
+  <!--RePosition至少要退避的距離-->
+  <add key="RePositionDistance" value="6000" />
 
 </appSettings>
