更新版本v1.2.0.42 針對南群創的充電站規格書的修改。

--- a/BCWinForm/Config/SOUTH_INNOLUX/ValueDefs_simple.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/ValueDefs_simple.config
@@ -132,6 +132,12 @@
             rangeType="W" targetType="UInt16" actionType="R" />
   <ValueDef name="CHARGERX_TO_AGVC_CHARGER_STATUS_REPORT_COUPLER3_STATUS" scenarioName="Handshake Area" desc="Handshake Area"
             rangeType="W" targetType="UInt16" actionType="R" />
+  <ValueDef name="CHARGERX_TO_AGVC_CHARGER_STATUS_REPORT_COUPLER1_POSITION" scenarioName="Handshake Area" desc="Handshake Area"
+            rangeType="W" targetType="UInt16" actionType="R" />
+  <ValueDef name="CHARGERX_TO_AGVC_CHARGER_STATUS_REPORT_COUPLER2_POSITION" scenarioName="Handshake Area" desc="Handshake Area"
+            rangeType="W" targetType="UInt16" actionType="R" />
+  <ValueDef name="CHARGERX_TO_AGVC_CHARGER_STATUS_REPORT_COUPLER3_POSITION" scenarioName="Handshake Area" desc="Handshake Area"
+            rangeType="W" targetType="UInt16" actionType="R" />
 
 
   <!--__________CHARGERX_TO_AGVC_CHARGER_CURRENT_CONSTANT_REPORT___________-->
