--- a/BCWinForm/Config/Taichung/EQMapToValueEvent.config
+++ b/BCWinForm/Config/Taichung/EQMapToValueEvent.config
@@ -70,13 +70,13 @@
   </EQObject>
 -->
 
-  <EQObject id="FireDoorInfo" cate="Equipment" MPLCName="FireDoor">
+  <!--<EQObject id="FireDoorInfo" cate="Equipment" MPLCName="FireDoor">
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_info_read_offset_0"></ValueEvent>
   </EQObject>
   <EQObject id="FireDoor1" cate="Unit" MPLCName="FireDoor">
     <ValueEvent baseName="FIRE_DOOR_READ" relativeName="Fire_door_read_offset_1"></ValueEvent>
     <ValueEvent baseName="FIRE_DOOR_WRITE" relativeName="Fire_door_write_offset_0"></ValueEvent>
-  </EQObject>
+  </EQObject>-->
 
 
 </EQMapToValueEvent>
