--- a/BCWinForm/Config/SOUTH_INNOLUX/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/EquipmentDefs_simple.config
@@ -81,34 +81,9 @@
           <PortStation id="AASTK220:AOUT2" unit_num="7" adr_id ="28051"  load_vh_type ="0" unload_vh_type ="0" />
         </EQPT>
 
-
-
-        <!--<EQPT id="EQ2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EquipmentValueDefMapAction, ScriptControl">
-          <Port id="P21" unit_num="1" port_num="1" capacity="1" port_type="B"/>
-          <Port id="P22" unit_num="2" port_num="2" capacity="1" port_type="B"/>
-          <Port id="P23" unit_num="3" port_num="3" capacity="1" port_type="B"/>
-          <Port id="P24" unit_num="4" port_num="4" capacity="1" port_type="B"/>
-          <Port id="P25" unit_num="5" port_num="5" capacity="1" port_type="B"/>
-        <PortStation id="P21" unit_num="1" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-        <PortStation id="P22" unit_num="2" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-        <PortStation id="P23" unit_num="3" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-        <PortStation id="P24" unit_num="4" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-        <PortStation id="P25" unit_num="5" adr_id ="00000"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-        </EQPT>-->
         <EQPT id="MCharger" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.ChargerValueDefMapAction, ScriptControl">
-          <Unit id="Charger1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger2" unit_num="2" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger3" unit_num="3" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
-          <Unit id="Charger4" unit_num="4" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.SubChargerValueDefMapAction, ScriptControl"/>
+          <Unit id="Charger1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
         </EQPT>
-        <EQPT id="FireDoorInfo1" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorInfoDefaultValueDefMapAction, ScriptControl">
-          <Unit id="FireDoor1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl"/>
-        </EQPT>
-        <EQPT id="FireDoorInfo2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorInfoDefaultValueDefMapAction, ScriptControl">
-          <Unit id="FireDoor2" unit_num="2" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl"/>
-        </EQPT>
-        <!--<EQPT id="FireDoor2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.FireDoorDefaultValueDefMapAction, ScriptControl">
-        </EQPT>-->
       </Node>
     </Zone>
   </Line>
