--- a/BCWinForm/App.config
+++ b/BCWinForm/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <!--NORTH_INNOLUX-->
   <configSections>
@@ -11,14 +11,17 @@
     <section name="AddressBaseDefs" type="com.mirle.ibg3k0.bcf.ConfigHandler.BaseAddressConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <section name="TimerActionDefs" type="com.mirle.ibg3k0.bcf.ConfigHandler.TimerActionConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" allowLocation="true" allowDefinition="Everywhere" />
+
     <section name="MPLCConnectionSetting" type="com.mirle.ibg3k0.bcf.ConfigHandler.MPLCConnectionConfigHandler, BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <!--<section name="MES_ValueDefs" type="com.mirle.ibg3k0.bcf.ConfigHandler.ValueDefConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <section name="MES_AddressBaseDefs" type="com.mirle.ibg3k0.bcf.ConfigHandler.BaseAddressConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />-->
     <section name="SECSConnectionSetting" type="com.mirle.ibg3k0.bcf.ConfigHandler.SECSConnectionConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <section name="TcpIpConnectionSetting" type="com.mirle.ibg3k0.bcf.ConfigHandler.TcpIpConnectionConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="DataCollectionSetting" type="com.mirle.ibg3k0.sc.ConfigHandler.DataCollectionConfigHandler,ScriptControl" allowLocation="true" allowDefinition="Everywhere" />
   </configSections>
+
   <TimerActionDefs>
     <!-- name為該TimerAction的名稱，intervalMilliSec為該Timer的間隔(單位：毫秒)，timerActionClass為執行的TimerAction類別
       其namespace必須是『com.mirle.ibg3k0.smc.data』。
@@ -38,6 +41,7 @@
     <TimerAction name="AGVCAliveTimer" intervalMilliSec="4000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.AGVCAliveTimer, ScriptControl" systemAction="false" />
     <TimerAction name="CouplerCheckTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.CouplerCheckTimerAction, ScriptControl" systemAction="false" />
   </TimerActionDefs>
+
   <nlog configSource="Config\NLog_simple.config" />
   <!--<MQEnvironments configSource="Config\MQEnvironments_simple.config" />-->
   <EquipmentDefs configSource="Config\NORTH_INNOLUX\EquipmentDefs_simple.config" />
@@ -46,14 +50,15 @@
   <ValueDefs configSource="Config\NORTH_INNOLUX\ValueDefs_simple.config" />
   <EQMapToValueEvent configSource="Config\NORTH_INNOLUX\EQMapToValueEvent.config" />
   <ValueEventRelativeDefs configSource="Config\NORTH_INNOLUX\ValueEventRelativeDefs.config" />
-  <appSettings configSource="Config\NORTH_INNOLUX\AppSettings_simple.config">
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
+
+  <appSettings configSource="Config\NORTH_INNOLUX\AppSettings_simple.config"/>
   <!--<hibernate-configuration configSource="Config\SQLite.cfg.xml"/>-->
+
   <MPLCConnectionSetting configSource="Config\NORTH_INNOLUX\MPLCConnectionSetting.config" />
   <SECSConnectionSetting configSource="Config\NORTH_INNOLUX\SECSConnectionSetting.config" />
   <TcpIpConnectionSetting configSource="Config\NORTH_INNOLUX\TcpIpConnectionSetting.config" />
   <DataCollectionSetting configSource="Config\NORTH_INNOLUX\DataCollectionSetting.config" />
+
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -79,16 +84,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
