--- a/BCWinForm/App.config
+++ b/BCWinForm/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <!--NORTH_INNOLUX-->
+  <!--AUO_CAAGV200-->
   <configSections>
     <section name="ValueDefs" type="com.mirle.ibg3k0.bcf.ConfigHandler.ValueDefConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
     <section name="EQMapToValueEvent" type="com.mirle.ibg3k0.bcf.ConfigHandler.EQMapToValueEventConfigHandler,BlockControlFramework" allowLocation="true" allowDefinition="Everywhere" />
@@ -28,43 +28,44 @@
     -->
     <!--<TimerAction name="SECSHeartBeat" intervalMilliSec="4000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.SECSHeartBeatTimerAction, ScriptControl" systemAction="false" />-->
     <TimerAction name="IdleVehicleTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.IdleVehicleTimerAction, ScriptControl" systemAction="false" />
-    <TimerAction name="TransferCommandTimerAction" intervalMilliSec="500" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.TransferCommandTimerAction, ScriptControl" systemAction="false" />
-    <TimerAction name="TaskCommandTimerAction" intervalMilliSec="500" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.TaskCommandTimerAction, ScriptControl" systemAction="false" />
+    <TimerAction name="TransferCommandTimerAction" intervalMilliSec="2000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.TransferCommandTimerAction, ScriptControl" systemAction="false" />
+    <TimerAction name="TaskCommandTimerAction" intervalMilliSec="2000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.TaskCommandTimerAction, ScriptControl" systemAction="false" />
     <!-- <TimerAction name="DBTableWatcherTimerAction" intervalMilliSec="30000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.DBTableWatcherTimerAction, ScriptControl" systemAction="false" />-->
-    <TimerAction name="DeadlockCheck" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.DeadlockCheck, ScriptControl" systemAction="false" />
     <TimerAction name="ZabbixDataCollectionTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.ZabbixDataCollectionTimerAction, ScriptControl" systemAction="false" />
     <TimerAction name="FailOverTimerAction" intervalMilliSec="2000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.FailOverTimerAction, ScriptControl" systemAction="false" />
     <TimerAction name="RandomGeneratesCommandTimerAction" intervalMilliSec="1000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.RandomGeneratesCommandTimerAction, ScriptControl" systemAction="false" />
     <!--<TimerAction name="PositionReportTimerAction" intervalMilliSec="1000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.PositionReportTimerAction, ScriptControl" systemAction="false" />-->
     <TimerAction name="VehicleHardwareInfoCollectionTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.VehicleHardwareInfoCollectionTimerAction, ScriptControl" systemAction="false" />
     <TimerAction name="LinkStatusCheck" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.LinkStatusCheck, ScriptControl" systemAction="false" />
-    <TimerAction name="AGVCAliveTimer" intervalMilliSec="4000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.AGVCAliveTimer, ScriptControl" systemAction="false" />
+    <!--<TimerAction name="AGVCAliveTimer" intervalMilliSec="4000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.AGVCAliveTimer, ScriptControl" systemAction="false" />-->
     <TimerAction name="CouplerCheckTimerAction" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.CouplerCheckTimerAction, ScriptControl" systemAction="false" />
+    <TimerAction name="DeadlockCheck" intervalMilliSec="5000" timerActionClass="com.mirle.ibg3k0.sc.Data.TimerAction.DeadlockCheck, ScriptControl" systemAction="false" />
+
   </TimerActionDefs>
 
   <nlog configSource="Config\NLog_simple.config" />
   <!--<MQEnvironments configSource="Config\MQEnvironments_simple.config" />-->
-  <EquipmentDefs configSource="Config\NORTH_INNOLUX\EquipmentDefs_simple.config" />
+  <EquipmentDefs configSource="Config\AUO_CAAGV200\EquipmentDefs_simple.config" />
   <!--<NodeFlowRelations configSource="Config\NodeFlowRel_simple.config" />-->
-  <AddressBaseDefs configSource="Config\NORTH_INNOLUX\AddressBaseDefs_simple.config" />
-  <ValueDefs configSource="Config\NORTH_INNOLUX\ValueDefs_simple.config" />
-  <EQMapToValueEvent configSource="Config\NORTH_INNOLUX\EQMapToValueEvent.config" />
-  <ValueEventRelativeDefs configSource="Config\NORTH_INNOLUX\ValueEventRelativeDefs.config" />
+  <AddressBaseDefs configSource="Config\AUO_CAAGV200\AddressBaseDefs_simple.config" />
+  <ValueDefs configSource="Config\AUO_CAAGV200\ValueDefs_simple.config" />
+  <EQMapToValueEvent configSource="Config\AUO_CAAGV200\EQMapToValueEvent.config" />
+  <ValueEventRelativeDefs configSource="Config\AUO_CAAGV200\ValueEventRelativeDefs.config" />
 
-  <appSettings configSource="Config\NORTH_INNOLUX\AppSettings_simple.config"/>
+  <appSettings configSource="Config\AUO_CAAGV200\AppSettings_simple.config"/>
   <!--<hibernate-configuration configSource="Config\SQLite.cfg.xml"/>-->
 
-  <MPLCConnectionSetting configSource="Config\NORTH_INNOLUX\MPLCConnectionSetting.config" />
-  <SECSConnectionSetting configSource="Config\NORTH_INNOLUX\SECSConnectionSetting.config" />
-  <TcpIpConnectionSetting configSource="Config\NORTH_INNOLUX\TcpIpConnectionSetting.config" />
-  <DataCollectionSetting configSource="Config\NORTH_INNOLUX\DataCollectionSetting.config" />
+  <MPLCConnectionSetting configSource="Config\AUO_CAAGV200\MPLCConnectionSetting.config" />
+  <SECSConnectionSetting configSource="Config\AUO_CAAGV200\SECSConnectionSetting.config" />
+  <TcpIpConnectionSetting configSource="Config\AUO_CAAGV200\TcpIpConnectionSetting.config" />
+  <DataCollectionSetting configSource="Config\AUO_CAAGV200\DataCollectionSetting.config" />
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
     <!--name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=OHSC_6F_100_Dev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_CAAGV100_v4;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHTC_DevEntities" connectionString="metadata=res://*/OHTCContext.csdl|res://*/OHTCContext.ssdl|res://*/OHTCContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db.ohxc.mirle.com.tw;initial catalog=AGVC_CAAGV200_v6;user id=sa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
