--- a/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
+++ b/BCWinForm/Config/NORTH_INNOLUX/AppSettings_simple.config
@@ -60,5 +60,6 @@
   <!--RePosition至少要退避的距離-->
   <add key="RePositionDistance" value="6000" />
   <!--暫時停車點-->
-  <add key="ParkAdr" value="16067" />
+  <add key="ParkAdr1" value="16067" />
+  <add key="ParkAdr2" value="16034" />
 </appSettings>
