--- a/BCWinForm/Config/AUO_CAAGV200/TcpIpConnectionSetting.config
+++ b/BCWinForm/Config/AUO_CAAGV200/TcpIpConnectionSetting.config
@@ -9,4 +9,5 @@
   <Common RecvTimeout="10000" SendTimeout="-1" MaxReadSize="1024" ReconnectInterval="5000" RetryCount="0"/>
   <Connection Name="OHxC_TO_OHx01" LocalIP="0.0.0.0" LocalPort="10001" RemoteIP="0.0.0.0" RemotePort="5001" ConnectionMode="0" FrameBuilderType="0"/>
   <Connection Name="OHxC_TO_OHx02" LocalIP="0.0.0.0" LocalPort="10002" RemoteIP="0.0.0.0" RemotePort="5002" ConnectionMode="0" FrameBuilderType="0"/>
+  <Connection Name="OHxC_TO_OHx03" LocalIP="0.0.0.0" LocalPort="10003" RemoteIP="0.0.0.0" RemotePort="5003" ConnectionMode="0" FrameBuilderType="0"/>
 </TcpIpConnectionSetting>
