加入南群創四色燈，紅綠燈功能 南群創Config與現場同步。

--- a/BCWinForm/Config/SOUTH_INNOLUX/EquipmentDefs_simple.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/EquipmentDefs_simple.config
@@ -23,9 +23,9 @@
           <PortStation id="CARUB900:03" unit_num="3" adr_id ="20097"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
         </EQPT>-->
         <EQPT id="EQ4" eqptType="3" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.EquipmentValueDefMapAction, ScriptControl">
-          <PortStation id="TEST0100-B1" unit_num="1" adr_id ="20077"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-          <PortStation id="TEST0200-B1" unit_num="2" adr_id ="20076"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
-          <PortStation id="TEST0300-B1" unit_num="3" adr_id ="20075"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
+          <PortStation id="TEST0100-B1" unit_num="1" adr_id ="10001"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
+          <PortStation id="TEST0200-B1" unit_num="2" adr_id ="10002"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
+          <PortStation id="TEST0300-B1" unit_num="3" adr_id ="10003"  load_vh_type ="0" unload_vh_type ="0" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.PortStationDefaultValueDefMapAction, ScriptControl"/>
 
         </EQPT>
         <EQPT id="EQ2" eqptType="2" communicationType="1" >
@@ -83,6 +83,12 @@
 
         <EQPT id="MCharger" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.ChargerValueDefMapAction, ScriptControl">
           <Unit id="Charger1" unit_num="1" unit_cate="C" eqpt_type="T" capacity="1" tact_time="25" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.NorthInnolux.SubChargerValueDefMapAction, ScriptControl"/>
+        </EQPT>
+        <EQPT id="ColorLight" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.ColorLightValueDefMapAction, ScriptControl">
+        </EQPT>
+        <EQPT id="TrafficLight1" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.TrafficLightValueDefMapAction, ScriptControl">
+        </EQPT>
+        <EQPT id="TrafficLight2" communicationType="1" valueDefMapActionClass="com.mirle.ibg3k0.sc.Data.ValueDefMapAction.TrafficLightValueDefMapAction, ScriptControl">
         </EQPT>
       </Node>
     </Zone>
