--- a/BCWinForm/Config/SOUTH_INNOLUX/ValueEventRelativeDefs.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/ValueEventRelativeDefs.config
@@ -326,6 +326,27 @@
   <ValueEventRelative name="Fire_door_write_offset_1">
     <Relative valueDefName="FIRE_DOOR_CROSS_SIGNAL" offset="0" length="1" startBit="1" endBit="1" MPLCName="FireDoor"/>
   </ValueEventRelative>
-
+  <!--==========================ColorLight============================-->
+  <ValueEventRelative name="Color_light_write_signal">
+    <Relative valueDefName="COLOR_LIGHT_RED_SIGNAL" offset="0" length="1" startBit="0" endBit="0" MPLCName="ColorLight"/>
+    <Relative valueDefName="COLOR_LIGHT_YELLOW_SIGNAL" offset="0" length="1" startBit="1" endBit="1" MPLCName="ColorLight"/>
+    <Relative valueDefName="COLOR_LIGHT_GREEN_SIGNAL" offset="0" length="1" startBit="2" endBit="2" MPLCName="ColorLight"/>
+    <Relative valueDefName="COLOR_LIGHT_BLUE_SIGNAL" offset="0" length="1" startBit="3" endBit="3" MPLCName="ColorLight"/>
+    <Relative valueDefName="COLOR_LIGHT_BUZZER_SIGNAL" offset="0" length="1" startBit="4" endBit="4" MPLCName="ColorLight"/>
+    <Relative valueDefName="COLOR_LIGHT_FORCE_ON_SIGNAL" offset="0" length="1" startBit="5" endBit="5" MPLCName="ColorLight"/>
+  </ValueEventRelative>
+  <!--==========================TrafficLight============================-->
+  <ValueEventRelative name="Traffic_light_read_signal">
+    <Relative valueDefName="TRAFFIC_LIGHT_WORK_BUTTON_SIGNAL" offset="0" length="1" startBit="0" endBit="0" MPLCName="TrafficLight1"/>
+  </ValueEventRelative>
+  
+  <ValueEventRelative name="Traffic_light_write_signal">
+    <Relative valueDefName="TRAFFIC_LIGHT_WORK_SIGNAL" offset="0" length="1" startBit="0" endBit="0" MPLCName="TrafficLight1"/>
+    <Relative valueDefName="TRAFFIC_LIGHT_RED_SIGNAL" offset="0" length="1" startBit="1" endBit="1" MPLCName="TrafficLight1"/>
+    <Relative valueDefName="TRAFFIC_LIGHT_YELLOW_SIGNAL" offset="0" length="1" startBit="2" endBit="2" MPLCName="TrafficLight1"/>
+    <Relative valueDefName="TRAFFIC_LIGHT_GREEN_SIGNAL" offset="0" length="1" startBit="3" endBit="3" MPLCName="TrafficLight1"/>
+    <Relative valueDefName="TRAFFIC_LIGHT_BUZZER_SIGNAL" offset="0" length="1" startBit="4" endBit="4" MPLCName="TrafficLight1"/>
+    <Relative valueDefName="TRAFFIC_LIGHT_FORCE_ON_SIGNAL" offset="0" length="1" startBit="5" endBit="5" MPLCName="TrafficLight1"/>
+  </ValueEventRelative>
 
 </ValueEventRelativeDefs>
