--- a/BCWinForm/Config/NLog_simple.config
+++ b/BCWinForm/Config/NLog_simple.config
@@ -185,9 +185,9 @@
       archiveEvery="Day" keepFileOpen="false"  />
 
     <target name="SystemProcessLog" xsi:type="File" fileName="${logDirectory}/SystemProcessLog.log" layout="${layout_OnlyMessage}"
-        archiveFileName="${logDirectory}/SystemProcessLog_{##}.log"
+        archiveFileName="${logDirectory}/SystemProcessLog/SystemProcessLog_{##}.log"
         archiveAboveSize="10240000"
-        maxArchiveFiles="20"
+        maxArchiveFiles="150"
         archiveNumbering="Sequence"
         keepFileOpen="false"  />
 
