--- a/BCWinForm/Config/SOUTH_INNOLUX/MPLCConnectionSetting.config
+++ b/BCWinForm/Config/SOUTH_INNOLUX/MPLCConnectionSetting.config
@@ -3,7 +3,7 @@
 <MPLCConnectionSetting>
 
 
- <Connection Name="Charger" Type="1" LogicalStationNumber="1" ReadIntervalMilliSec="500" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
+ <!--<Connection Name="Charger" Type="1" LogicalStationNumber="1" ReadIntervalMilliSec="500" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
                AliveMPLCDeviceBlock="W41">
     <Device Type="W" BufferLength="100000" IdRadix="16" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="00000" EndBlock="00200"></ReadRange>
@@ -33,7 +33,7 @@
     <Device Type="0" BufferLength="200" IdRadix="10" BlockBitCount="16" DeviceBitCount="16">
       <ReadRange BeginBlock="0000" EndBlock="00012"></ReadRange>
     </Device>
-  </Connection>
+  </Connection>-->
   
   <!-- <Connection Name="TrafficLight1" Type="1" LogicalStationNumber="1" ReadIntervalMilliSec="500" MaxMPLCPoolSize="3" MaxMPLCWaitTime="4" MaxMPLCRetryCount="3"
                AliveMPLCDeviceBlock="W41">
